# flask-sqlalchemy-project

./: .gitignore  README.md  app.py  models.py  pyproject.toml  requirements.txt
app/: __init__.py  models.py  routes.py
flask_sqlalchemy_project.egg-info/: PKG-INFO  SOURCES.txt
instance/: app.db
tests/: test_app.py
